# lenovo_extreme_cooling

./: Cargo.toml
src/: ec.rs  main.rs
src/cpuio/: mod.rs  x86.rs
