[package]
name = "extreme_cooling"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpuio = { version = "0.3.0" }
libc = { version = "0.2.95" }
clap = { version = "2.33.3" }
clap_derive = { version = "3.0.0-beta.2" }
